--- a/apps-morejee/Apps.MoreJee.Service/Properties/launchSettings.json
+++ b/apps-morejee/Apps.MoreJee.Service/Properties/launchSettings.json
@@ -9,18 +9,13 @@
   },
   "$schema": "http://json.schemastore.org/launchsettings.json",
   "profiles": {
-    "Apps.MoreJee.Service": {
+    "Development": {
       "commandName": "Project",
       "launchUrl": "api/values",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "http://localhost:1883"
-    },
-    "Docker": {
-      "commandName": "Docker",
-      "launchBrowser": true,
-      "launchUrl": "{Scheme}://localhost:{ServicePort}"
+      "applicationUrl": "http://192.168.1.176:1883"
     }
   }
 }
