--- a/apps-morejee/Apps.MoreJee.Service/appsettings.Development.json
+++ b/apps-morejee/Apps.MoreJee.Service/appsettings.Development.json
@@ -6,7 +6,7 @@
       "Microsoft": "Information"
     }
   },
-  "ConnectionString": "Server=localhost;Database=dmz_morejee;User Id=postgres;Password=root",
+  "ConnectionString": "Server=192.168.99.100;Port=15266;Database=dmz_morejee;User Id=postgres;Password=root",
   "JwtSettings": {
     "Issuer": "decohero.net",
     "Audience": "decohero.net",
