--- a/apps-morejee/Apps.MoreJee.Service/appsettings.Development.json
+++ b/apps-morejee/Apps.MoreJee.Service/appsettings.Development.json
@@ -7,6 +7,7 @@
     }
   },
   "ConnectionString": "Server=192.168.99.100;Port=15266;Database=dmz_morejee;User Id=postgres;Password=root",
+  "APIGatewayServer": "http://192.168.99.100:1881",
   "JwtSettings": {
     "Issuer": "decohero.net",
     "Audience": "decohero.net",
