--- a/apps-legacy/ApiServer/appsettings.Production.json
+++ b/apps-legacy/ApiServer/appsettings.Production.json
@@ -1,38 +1,9 @@
 ﻿{
   "Logging": {
-    "IncludeScopes": false,
     "LogLevel": {
-      "Default": "Error",
+      "Default": "Warning",
+      "System": "Information",
       "Microsoft": "Information"
-    },
-    "Debug": {
-      "LogLevel": {
-        "Default": "Warning"
-      }
-    },
-    "Console": {
-      "LogLevel": {
-        "Default": "Warning"
-      }
     }
-  },
-  "ConnectionString": "Server=192.168.1.6;Port=5433;Database=dmz_ehome;User Id=postgres;Password=omega",
-  "ServerId": 1,
-  "GuidSalt": "",
-  "GuidMinLen": 8,
-  "MediaShareServer": "http://share.damaozhu.com.cn",
-  "JwtSettings": {
-    "Issuer": "ehome.damaozhu.com.cn",
-    "Audience": "ehome.damaozhu.com.cn",
-    "SecretKey": "damaozhu-anzhumeiju-app-ehome",
-    "ExpiresDay": 1
-  },
-  "MessageMail": "info@damaozhu.com",
-  "SMTPSettings": {
-    "Account": "liwangp2012@163.com",
-    "Password": "wqj199139",
-    "Hosts": "smtp.163.com",
-    "Port": 25,
-    "NickName": "Leon Auto Account"
   }
 }
