正在重构category控制器,未完善

--- a/apps-basic/Apps.Basic.Service/appsettings.Development.json
+++ b/apps-basic/Apps.Basic.Service/appsettings.Development.json
@@ -6,7 +6,8 @@
       "Microsoft": "Information"
     }
   },
-  "ConnectionString": "Server=localhost;Port=5432;Database=dmz_basic;User Id=postgres;Password=root",
+  "ConnectionString": "Server=192.168.99.100;Port=15266;Database=dmz_basic;User Id=postgres;Password=root",
+  //"ConnectionString": "Server=192.168.1.6;Port=5433;Database=dmz_test_basic;User Id=postgres;Password=omega",
   "JwtSettings": {
     "Issuer": "decohero.net",
     "Audience": "decohero.net",
