--- a/apps-morejee/Apps.MoreJee.Service/Properties/launchSettings.json
+++ b/apps-morejee/Apps.MoreJee.Service/Properties/launchSettings.json
@@ -15,7 +15,7 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "http://192.168.3.19:1883"
+      "applicationUrl": "http://localhost:1883"
     }
   }
 }
