--- a/apps-morejee/Apps.MoreJee.Export/Apps.MoreJee.Export.csproj
+++ b/apps-morejee/Apps.MoreJee.Export/Apps.MoreJee.Export.csproj
@@ -4,4 +4,13 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Flurl" Version="2.8.0" />
+    <PackageReference Include="Flurl.Http" Version="2.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\apps-common\Apps.Base.Common\Apps.Base.Common.csproj" />
+  </ItemGroup>
+
 </Project>
