--- a/apps-legacy/ApiServer/appsettings.Development.json
+++ b/apps-legacy/ApiServer/appsettings.Development.json
@@ -23,7 +23,6 @@
   "ServerId": 1,
   "GuidSalt": "",
   "GuidMinLen": 8,
-  "MediaShareServer": "http://localhost/ApiShareServe",
   "JwtSettings": {
     "Issuer": "decohero.net",
     "Audience": "decohero.net",
@@ -39,6 +38,7 @@
     "NickName": "Leon Auto Account"
   },
   "Plugins": {
-    "OrderViewer": "http://localhost:1882/order-viewer/index.html"
+    "OrderViewer": "http://192.168.1.176:3000/dmz/order/viewer",
+    "MediaShare": "http://192.168.1.176:3000/dmz/share/panorama"
   }
 }
