--- a/apps-legacy/docker-compose.bamboo.yml
+++ b/apps-legacy/docker-compose.bamboo.yml
@@ -3,32 +3,14 @@ version: '3.4'
 services:
   dmzpostgresdb:
     container_name: dmzpostgresdb_c
-    image: postgres:10.5
-    volumes:
-      - "/var/bamboo/dmzpostgresdb/data:/var/lib/postgresql/data"
-    environment:
-      - POSTGRES_USER=${PostgresDB_User}
-      - POSTGRES_PASSWORD=${PostgresDB_Password}
     ports:
       - "1990:5432"
-    networks:
-      - dmzapinet
-
+      
   dmzapiserver:
     container_name: dmzapiserver_c
-    image: dmzapiserver
-    build:
-      context: .
-      dockerfile: ApiServer/Dockerfile
     ports:
       - "1991:80"
-    networks:
-      - dmzapinet
     environment:
-      # GuidSettings
-      - GuidSettings:ServerId=${GuidSettings_ServerId}
-      - GuidSettings:GuidSalt=${GuidSettings_GuidSalt}
-      - GuidSettings:GuidMinLen=${GuidSettings_GuidMinLen}
       # JwtSettings
       - JwtSettings:Issuer=damaozhu.com.cn
       - JwtSettings:Audience=damaozhu.com.cn
@@ -37,38 +19,24 @@ services:
       # ConnectionString
       - ConnectionString=Server=dmzpostgresdb;Port=5432;Database=dmz;User Id=${PostgresDB_User};Password=${PostgresDB_Password}
       # Plugins
-      - Plugins:OrderViewer=http://192.168.1.176:3000/dmz/order/viewer
-      - Plugins:MediaShare=http://192.168.1.176:3000/dmz/share/panorama
+      - Plugins:OrderViewer=http://share.damaozhu.com.cn/dmz/order/viewer
+      - Plugins:MediaShare=http://share.damaozhu.com.cn/dmz/share/panorama
     volumes:
       - "/var/bamboo/dmzapiserver/logs:/app/logs"
       - "/var/bamboo/dmzapiserver/wwwroot/upload:/app/wwwroot/upload"
-    depends_on:
-      - dmzpostgresdb
 
   dmztoolsite_for_dmzapiserver:
     container_name: dmztoolsite_for_dmzapiserver_c
-    image: liwangp2012/bamboo-tool-site:latest
     ports:
       - "1992:3000"
-    networks:
-      - dmzapinet
     environment:
-      - SERVER=dmzapiserver
-    depends_on:
-      - dmzapiserver
+      - SERVER=http://testapi.damaozhu.com.cn
 
   dmzapiserver_ehome:
     container_name: dmzapiserver_ehome_c
-    image: dmzapiserver
     ports:
       - "1993:80"
-    networks:
-      - dmzapinet
     environment:
-      # GuidSettings
-      - GuidSettings:ServerId=${GuidSettings_ServerId}
-      - GuidSettings:GuidSalt=${GuidSettings_GuidSalt}
-      - GuidSettings:GuidMinLen=${GuidSettings_GuidMinLen}
       # JwtSettings
       - JwtSettings:Issuer=damaozhu.com.cn
       - JwtSettings:Audience=damaozhu.com.cn
@@ -76,23 +44,16 @@ services:
       - JwtSettings:ExpiresDay=1
       # ConnectionString
       - ConnectionString=Server=dmzpostgresdb;Port=5432;Database=dmz_ehome;User Id=${PostgresDB_User};Password=${PostgresDB_Password}
+      # Plugins
+      - Plugins:OrderViewer=http://kennshare.damaozhu.com.cn/dmz/order/viewer
+      - Plugins:MediaShare=http://kennshare.damaozhu.com.cn/dmz/share/panorama
     volumes:
       - "/var/bamboo/dmzapiserver_ehome/logs:/app/logs"
       - "/var/bamboo/dmzapiserver/wwwroot/upload:/app/wwwroot/upload"
-    depends_on:
-      - dmzpostgresdb
-
+      
   dmztoolsite_for_dmzapiserver_ehome:
     container_name: dmztoolsite_for_dmzapiserver_ehome_c
-    image: liwangp2012/bamboo-tool-site:latest
     ports:
       - "1994:3000"
-    networks:
-      - dmzapinet
     environment:
-      - SERVER=dmzapiserver_ehome
-    depends_on:
-      - dmzapiserver_ehome
-
-networks:
-  dmzapinet:
+      - SERVER=http://kennapi.damaozhu.com.cn
