--- a/apps-legacy/ApiServer/appsettings.Development.json
+++ b/apps-legacy/ApiServer/appsettings.Development.json
@@ -24,9 +24,9 @@
   "GuidSalt": "",
   "GuidMinLen": 8,
   "JwtSettings": {
-    "Issuer": "decohero.net",
-    "Audience": "decohero.net",
-    "SecretKey": "damaozhu-anzhumeiju-app",
+    "Issuer": "damaozhu.com.cn",
+    "Audience": "damaozhu.com.cn",
+    "SecretKey": "damaozhu-dev-test-app",
     "ExpiresDay": 1
   },
   "MessageMail": "info@damaozhu.com",
