--- a/apps-legacy/ApiServer/Dockerfile
+++ b/apps-legacy/ApiServer/Dockerfile
@@ -19,4 +19,5 @@ RUN dotnet publish ApiServer.csproj -c Release -o /app
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app .
+COPY ApiServer/wwwroot/AppBackup/. /app/wwwroot/AppBackup/
 ENTRYPOINT ["dotnet", "ApiServer.dll"]
