修复产品规格价格遗留在产品api上导致模型价格被重置问题

--- a/apps-legacy/docker-compose.yml
+++ b/apps-legacy/docker-compose.yml
@@ -82,7 +82,7 @@ services:
       - "/var/bamboo/dmzapiserver_dev/logs:/app/logs"
       - "/var/bamboo/dmzapiserver/wwwroot/upload:/app/wwwroot/upload"
     depends_on:
-      - dmzpostgresdb
+      - dmzapiserver
 
   dmztoolsite_for_dmzapiserver_dev:
     container_name: dmztoolsite_for_dmzapiserver_dev_c
