--- a/apps-legacy/docker-compose.yml
+++ b/apps-legacy/docker-compose.yml
@@ -7,9 +7,9 @@ services:
     image: postgres:10.5
     volumes:
       - "/var/bamboo/dmzpostgresdb/data:/var/lib/postgresql/data"
-    environment:
-      - POSTGRES_USER=${PostgresDB_User}
-      - POSTGRES_PASSWORD=${PostgresDB_Password}
+    # environment:
+    #   - POSTGRES_USER=${PostgresDB_User}
+    #   - POSTGRES_PASSWORD=${PostgresDB_Password}
     ports:
       - "1990:5432"
     networks:
@@ -25,21 +25,21 @@ services:
       - "1991:80"
     networks:
       - dmzapinet
-    environment:
-      # GuidSettings
-      - GuidSettings:ServerId=${GuidSettings_ServerId}
-      - GuidSettings:GuidSalt=${GuidSettings_GuidSalt}
-      - GuidSettings:GuidMinLen=${GuidSettings_GuidMinLen}
-      # JwtSettings
-      - JwtSettings:Issuer=damaozhu.com.cn
-      - JwtSettings:Audience=damaozhu.com.cn
-      - JwtSettings:SecretKey=damaozhu-dev-test-app
-      - JwtSettings:ExpiresDay=1
-      # ConnectionString
-      - ConnectionString=Server=dmzpostgresdb;Port=5432;Database=dmz;User Id=${PostgresDB_User};Password=${PostgresDB_Password}
-      # Plugins
-      - Plugins:OrderViewer=http://192.168.1.176:3000/dmz/order/viewer
-      - Plugins:MediaShare=http://192.168.1.176:3000/dmz/share/panorama
+    # environment:
+    #   # GuidSettings
+    #   - GuidSettings:ServerId=${GuidSettings_ServerId}
+    #   - GuidSettings:GuidSalt=${GuidSettings_GuidSalt}
+    #   - GuidSettings:GuidMinLen=${GuidSettings_GuidMinLen}
+    #   # JwtSettings
+    #   - JwtSettings:Issuer=damaozhu.com.cn
+    #   - JwtSettings:Audience=damaozhu.com.cn
+    #   - JwtSettings:SecretKey=damaozhu-dev-test-app
+    #   - JwtSettings:ExpiresDay=1
+    #   # ConnectionString
+    #   - ConnectionString=Server=dmzpostgresdb;Port=5432;Database=dmz;User Id=${PostgresDB_User};Password=${PostgresDB_Password}
+    #   # Plugins
+    #   - Plugins:OrderViewer=http://192.168.1.176:3000/dmz/order/viewer
+    #   - Plugins:MediaShare=http://192.168.1.176:3000/dmz/share/panorama
     volumes:
       - "/var/bamboo/dmzapiserver/logs:/app/logs"
       - "/var/bamboo/dmzapiserver/AppBackup:/app/wwwroot/AppBackup"
@@ -54,8 +54,8 @@ services:
       - "1992:3000"
     networks:
       - dmzapinet
-    environment:
-      - SERVER=dmzapiserver
+    # environment:
+    #   - SERVER=dmzapiserver
     depends_on:
       - dmzapiserver
 
@@ -66,18 +66,18 @@ services:
       - "1993:80"
     networks:
       - dmzapinet
-    environment:
-      # GuidSettings
-      - GuidSettings:ServerId=${GuidSettings_ServerId}
-      - GuidSettings:GuidSalt=${GuidSettings_GuidSalt}
-      - GuidSettings:GuidMinLen=${GuidSettings_GuidMinLen}
-      # JwtSettings
-      - JwtSettings:Issuer=damaozhu.com.cn
-      - JwtSettings:Audience=damaozhu.com.cn
-      - JwtSettings:SecretKey=damaozhu-ehome-test-app
-      - JwtSettings:ExpiresDay=1
-      # ConnectionString
-      - ConnectionString=Server=dmzpostgresdb;Port=5432;Database=dmz_ehome;User Id=${PostgresDB_User};Password=${PostgresDB_Password}
+    # environment:
+    #   # GuidSettings
+    #   - GuidSettings:ServerId=${GuidSettings_ServerId}
+    #   - GuidSettings:GuidSalt=${GuidSettings_GuidSalt}
+    #   - GuidSettings:GuidMinLen=${GuidSettings_GuidMinLen}
+    #   # JwtSettings
+    #   - JwtSettings:Issuer=damaozhu.com.cn
+    #   - JwtSettings:Audience=damaozhu.com.cn
+    #   - JwtSettings:SecretKey=damaozhu-ehome-test-app
+    #   - JwtSettings:ExpiresDay=1
+    #   # ConnectionString
+    #   - ConnectionString=Server=dmzpostgresdb;Port=5432;Database=dmz_ehome;User Id=${PostgresDB_User};Password=${PostgresDB_Password}
     volumes:
       - "/var/bamboo/dmzapiserver_dev/logs:/app/logs"
       - "/var/bamboo/dmzapiserver/wwwroot/upload:/app/wwwroot/upload"
@@ -91,8 +91,8 @@ services:
       - "1994:3000"
     networks:
       - dmzapinet
-    environment:
-      - SERVER=dmzapiserver_dev
+    # environment:
+    #   - SERVER=dmzapiserver_dev
     depends_on:
       - dmzapiserver_dev
 
