--- a/apps-legacy/ApiServer/ApiServer.csproj
+++ b/apps-legacy/ApiServer/ApiServer.csproj
@@ -63,6 +63,7 @@
 
   <ItemGroup>
     <PackageReference Include="CsvHelper" Version="7.1.0" />
+    <PackageReference Include="EPPlus" Version="4.5.2.1" />
     <PackageReference Include="MailKit" Version="2.0.6" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.0.2" />
