--- a/apps-legacy/ApiServer/appsettings.Development.json
+++ b/apps-legacy/ApiServer/appsettings.Development.json
@@ -18,7 +18,7 @@
   },
   //"ConnectionString": "Server=192.168.1.6;Port=1990;Database=dmz;User Id=postgres;Password=root",
   //"ConnectionString": "Server=192.168.99.100;Port=1990;Database=dmz;User Id=postgres;Password=root",
-  "ConnectionString": "Server=localhost;Database=dmz;User Id=postgres;Password=root",
+  "ConnectionString": "Server=localhost;Database=dmz_t;User Id=postgres;Password=root",
   //"ConnectionString": "Server=192.168.1.6;Port=5433;Database=dmz;User Id=postgres;Password=omega",
   "TokenKey": "apiserver secret key here",
   "ServerId": 1,
