--- a/apps-legacy/docker-compose.dev.yml
+++ b/apps-legacy/docker-compose.dev.yml
@@ -28,37 +28,37 @@ services:
       - Plugins:OrderViewer=http://192.168.1.176:3000/dmz/order/viewer
       - Plugins:MediaShare=http://192.168.1.176:3000/dmz/share/panorama
 
-  dmztoolsite_for_dmzapiserver:
-    ports:
-      - "1992:3000"
-    environment:
-      - SERVER=dmzapiserver
+  # dmztoolsite_for_dmzapiserver:
+  #   ports:
+  #     - "1992:3000"
+  #   environment:
+  #     - SERVER=dmzapiserver
 
-  dmzapiserver_dev:
-    ports:
-      - "1993:80"
-    environment:
-      # GuidSettings
-      - GuidSettings:ServerId=${GuidSettings_ServerId}
-      - GuidSettings:GuidSalt=${GuidSettings_GuidSalt}
-      - GuidSettings:GuidMinLen=${GuidSettings_GuidMinLen}
-      # JwtSettings
-      - JwtSettings:Issuer=damaozhu.com.cn
-      - JwtSettings:Audience=damaozhu.com.cn
-      - JwtSettings:SecretKey=damaozhu-ehome-test-app
-      - JwtSettings:ExpiresDay=1
-      # ConnectionString
-      - ConnectionString=Server=dmzpostgresdb;Port=5432;Database=dmz_ehome;User Id=${PostgresDB_User};Password=${PostgresDB_Password}
+  # dmzapiserver_dev:
+  #   ports:
+  #     - "1993:80"
+  #   environment:
+  #     # GuidSettings
+  #     - GuidSettings:ServerId=${GuidSettings_ServerId}
+  #     - GuidSettings:GuidSalt=${GuidSettings_GuidSalt}
+  #     - GuidSettings:GuidMinLen=${GuidSettings_GuidMinLen}
+  #     # JwtSettings
+  #     - JwtSettings:Issuer=damaozhu.com.cn
+  #     - JwtSettings:Audience=damaozhu.com.cn
+  #     - JwtSettings:SecretKey=damaozhu-ehome-test-app
+  #     - JwtSettings:ExpiresDay=1
+  #     # ConnectionString
+  #     - ConnectionString=Server=dmzpostgresdb;Port=5432;Database=dmz_ehome;User Id=${PostgresDB_User};Password=${PostgresDB_Password}
 
-  dmztoolsite_for_dmzapiserver_dev:
-    ports:
-      - "1994:3000"
-    environment:
-      - SERVER=dmzapiserver_dev
+  # dmztoolsite_for_dmzapiserver_dev:
+  #   ports:
+  #     - "1994:3000"
+  #   environment:
+  #     - SERVER=dmzapiserver_dev
 
-  dmzapigateway:
-    ports:
-      - "1995:80"
+  # dmzapigateway:
+  #   ports:
+  #     - "1995:80"
 
 networks:
   dmzapinet:
