--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,11 +2,11 @@ version: '3.4'
 
 services:
 
-  apps-base-apigateway:
-    image: apps-base-apigateway:latest
-    build:
-      context: .
-      dockerfile: apps-common/Apps.Base.APIGateway/Dockerfile
+  # apps-base-apigateway:
+  #   image: apps-base-apigateway:latest
+  #   build:
+  #     context: .
+  #     dockerfile: apps-common/Apps.Base.APIGateway/Dockerfile
 
   apps-legacy-basic-service:
     image: apps-legacy-basic-service:latest
@@ -14,11 +14,11 @@ services:
       context: ./apps-legacy
       dockerfile: ApiServer/Dockerfile
 
-  apps-oms-service:
-    image: apps-oms-service:latest
-    build:
-      context: .
-      dockerfile: apps-oms/Apps.OMS.Service/Dockerfile
+  # apps-oms-service:
+  #   image: apps-oms-service:latest
+  #   build:
+  #     context: .
+  #     dockerfile: apps-oms/Apps.OMS.Service/Dockerfile
 
 
 
