当前使用本地consul测试成功

--- a/apps-oms/Apps.OMS.Service/appsettings.Development.json
+++ b/apps-oms/Apps.OMS.Service/appsettings.Development.json
@@ -18,5 +18,8 @@
     "ServerId": 1,
     "GuidSalt": "",
     "GuidMinLen": 8
+  },
+  "ConsulConfig": {
+    "Address": "http://192.168.99.100:8500"
   }
 }
