--- a/apps-common/Apps.Base.APIGateway/Apps.Base.APIGateway.csproj
+++ b/apps-common/Apps.Base.APIGateway/Apps.Base.APIGateway.csproj
@@ -16,7 +16,8 @@
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.0.1916590" />
     <PackageReference Include="NLog" Version="4.5.11" />
     <PackageReference Include="NLog.Web.AspNetCore" Version="4.7.0" />
-    <PackageReference Include="Ocelot" Version="12.0.1" />
+    <PackageReference Include="Ocelot" Version="13.0.0" />
+    <PackageReference Include="Ocelot.Provider.Consul" Version="13.0.0" />
   </ItemGroup>
 
   <ItemGroup>
@@ -27,5 +28,7 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
+
+  <ProjectExtensions><VisualStudio><UserProperties ocelot_1json__JSONSchema="http://json.schemastore.org/schema-org-action" /></VisualStudio></ProjectExtensions>
 
 </Project>
