完成consul 测试,即将开始进行使用

--- a/apps-common/Apps.Base.APIGateway/Apps.Base.APIGateway.csproj
+++ b/apps-common/Apps.Base.APIGateway/Apps.Base.APIGateway.csproj
@@ -29,6 +29,6 @@
     </Content>
   </ItemGroup>
 
-  <ProjectExtensions><VisualStudio><UserProperties ocelot_1json__JSONSchema="http://json.schemastore.org/schema-org-action" /></VisualStudio></ProjectExtensions>
+  <ProjectExtensions><VisualStudio><UserProperties ocelot_1json__JSONSchema="http://json.schemastore.org/travis" /></VisualStudio></ProjectExtensions>
 
 </Project>
