--- a/apps-oms/Apps.OMS.Service/appsettings.Development.json
+++ b/apps-oms/Apps.OMS.Service/appsettings.Development.json
@@ -20,6 +20,13 @@
     "GuidMinLen": 8
   },
   "ConsulConfig": {
-    "Address": "http://192.168.99.100:8500"
+    "Server": {
+      "IP": "192.168.99.100",
+      "Port": "8500"
+    },
+    "Client": {
+      "IP": "192.168.3.54",
+      "Port": "1996"
+    }
   }
 }
