--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,17 +2,17 @@ version: '3.4'
 
 services:
 
-  # apps-base-apigateway:
-  #   image: apps-base-apigateway:latest
-  #   build:
-  #     context: .
-  #     dockerfile: apps-common/Apps.Base.APIGateway/Dockerfile
-
-  apps-legacy-basic-service:
-    image: apps-legacy-basic-service:latest
+  apps-base-apigateway:
+    image: apps-base-apigateway:latest
     build:
-      context: ./apps-legacy
-      dockerfile: ApiServer/Dockerfile
+      context: .
+      dockerfile: apps-common/Apps.Base.APIGateway/Dockerfile
+
+  # apps-legacy-basic-service:
+  #   image: apps-legacy-basic-service:latest
+  #   build:
+  #     context: ./apps-legacy
+  #     dockerfile: ApiServer/Dockerfile
 
   # apps-oms-service:
   #   image: apps-oms-service:latest
