--- a/apps-legacy/ApiServer/appsettings.Development.json
+++ b/apps-legacy/ApiServer/appsettings.Development.json
@@ -42,5 +42,15 @@
   "Plugins": {
     "OrderViewer": "http://192.168.1.176:3000/dmz/order/viewer",
     "MediaShare": "http://192.168.1.176:3000/dmz/share/panorama"
+  },
+  "ConsulConfig": {
+    "Server": {
+      "IP": "localhost",
+      "Port": "8500"
+    },
+    "Client": {
+      "IP": "192.168.1.176",
+      "Port": "1882"
+    }
   }
 }
