--- a/docker-deploy/development/.env
+++ b/docker-deploy/development/.env
@@ -8,29 +8,31 @@ PostgresDB_User=postgres
 PostgresDB_Password=root
 
 # 公司测试环境配置
-APIGatewayServer_Dev=http://testapi.damaozhu.com.cn
-MoreJeeSite_Dev=http://testadmin.damaozhu.com.cn
-MoreJeeToolSite_Dev=http://testtool.damaozhu.com.cn
+SECRETKEY_Dev=leon-develoment-key
+APIGatewayServer_Dev=http://192.168.99.100:5701
+MoreJeeSite_Dev=http://192.168.99.100:5705
+MoreJeeToolSite_Dev=http://192.168.99.100:5703
 JwtSettings_Issuer_Dev=damaozhu.com.cn
 JwtSettings_Audience_Dev=damaozhu.com.cn
 JwtSettings_SecretKey_Dev=damaozhu-dev-test-app
 JwtSettings_ExpiresDay_Dev=1
 ServerDB_Dev=dmz
 OMSServerDB_Dev=dmz_oms
-Plugins_OrderViewer_Dev=http://testtool.damaozhu.com.cn/dmz-oms/order-viewer
-Plugins_MediaShare_Dev=http://testtool.damaozhu.com.cn/dmz-hd/share
+Plugins_OrderViewer_Dev=http://192.168.99.100:5703/dmz-oms/order-viewer
+Plugins_MediaShare_Dev=http://192.168.99.100:5703/dmz-hd/share
 
 
 # EHome环境
-APIGatewayServer_EHome=http://kennapi.damaozhu.com.cn
-MoreJeeSite_EHome=http://kennadmin.damaozhu.com.cn
-MoreJeeToolSite_EHome=http://kenntool.damaozhu.com.cn
+SECRETKEY_EHome=leon-develoment-key
+APIGatewayServer_EHome=http://192.168.99.100:5801
+MoreJeeSite_EHome=http://192.168.99.100:5805
+MoreJeeToolSite_EHome=http://192.168.99.100:5803
 JwtSettings_Issuer_EHome=damaozhu.com.cn
 JwtSettings_Audience_EHome=damaozhu.com.cn
 JwtSettings_SecretKey_EHome=damaozhu-ehome-test-app
 JwtSettings_ExpiresDay_EHome=1
 ServerDB_EHome=dmz_ehome
 OMSServerDB_EHome=dmz_ehome_oms
-Plugins_OrderViewer_EHome=http://kenntool.damaozhu.com.cn/dmz-oms/order-viewer
-Plugins_MediaShare_EHome=http://kenntool.damaozhu.com.cn/dmz-hd/share
+Plugins_OrderViewer_EHome=http://192.168.99.100:5803/dmz-oms/order-viewer
+Plugins_MediaShare_EHome=http://192.168.99.100:5803/dmz-hd/share
 
