--- a/apps-legacy/ApiServer/ApiServer.csproj
+++ b/apps-legacy/ApiServer/ApiServer.csproj
@@ -62,6 +62,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Consul" Version="0.7.2.6" />
     <PackageReference Include="CsvHelper" Version="7.1.0" />
     <PackageReference Include="EPPlus" Version="4.5.2.1" />
     <PackageReference Include="MailKit" Version="2.0.6" />
