修改docker-compose部署配置

--- a/apps-legacy/ApiServer/ApiServer.csproj
+++ b/apps-legacy/ApiServer/ApiServer.csproj
@@ -95,6 +95,15 @@
 
   <ItemGroup>
     <Content Update="nlog.config" CopyToOutputDirectory="PreserveNewest" />
+    <Content Update="wwwroot\AppBackup\navigations.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Update="wwwroot\AppBackup\user-nav-details.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Update="wwwroot\AppBackup\user-navs.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
   <ProjectExtensions>
