--- a/docker-deploy/company6/docker-compose.yml
+++ b/docker-deploy/company6/docker-compose.yml
@@ -112,18 +112,18 @@ services:
     depends_on:
       - dmzpostgresdb
       - dmzconsulservice-dev
-# MoreJee Site ( For Company Development )
-  apps-morejee-site-dev:
-    container_name: apps-morejee-site-dev-c
-    image: apps-morejee-site:latest
-    environment:
-      - APISERVER=${APIGatewayServer_Dev}
-      - TOOLSERVER=${MoreJeeToolSite_Dev}
-      - SECRETKEY=${SECRETKEY_Dev}
-    ports:
-      - "5705:4000"
-    networks:
-      - dmzdevnet
+# # MoreJee Site ( For Company Development )
+#   apps-morejee-site-dev:
+#     container_name: apps-morejee-site-dev-c
+#     image: apps-morejee-site:latest
+#     environment:
+#       - APISERVER=${APIGatewayServer_Dev}
+#       - TOOLSERVER=${MoreJeeToolSite_Dev}
+#       - SECRETKEY=${SECRETKEY_Dev}
+#     ports:
+#       - "5705:4000"
+#     networks:
+#       - dmzdevnet
 
 # MoreJee Consul ( For Company EHome )
   dmzconsulservice-ehome:
@@ -226,18 +226,18 @@ services:
     depends_on:
       - dmzpostgresdb
       - dmzconsulservice-ehome
-# MoreJee Site ( For Company Development )
-  apps-morejee-site-ehome:
-    container_name: apps-morejee-site-ehome-c
-    image: apps-morejee-site:latest
-    environment:
-      - APISERVER=${APIGatewayServer_EHome}
-      - TOOLSERVER=${MoreJeeToolSite_EHome}
-      - SECRETKEY=${SECRETKEY_EHome}
-    ports:
-      - "5805:4000"
-    networks:
-      - dmzehomenet
+# # MoreJee Site ( For Company Development )
+#   apps-morejee-site-ehome:
+#     container_name: apps-morejee-site-ehome-c
+#     image: apps-morejee-site:latest
+#     environment:
+#       - APISERVER=${APIGatewayServer_EHome}
+#       - TOOLSERVER=${MoreJeeToolSite_EHome}
+#       - SECRETKEY=${SECRETKEY_EHome}
+#     ports:
+#       - "5805:4000"
+#     networks:
+#       - dmzehomenet
 
 networks:
   dmzdevnet:
